# va

./: .clang-format  CMakeLists.txt  README.md  version.h  version.h.in
common/: state.h  thread-safe-queue.h  utils.h
inferences/yolov5/: yolov5.py
src/: version.h
tests/: CMakeLists.txt  source.cpp  utils.cpp
va-hls/: CMakeLists.txt  version.h.in
va-hls/src/: main.cpp  playlist.h  server.cpp  server.h  session.cpp  session.h  settings.h  utils.cpp  utils.h  version.h
va-hls/src/state/: state.cpp  state.h
va-inference/: CMakeLists.txt
va-inference/src/: executor.cpp  executor.h  main.cpp  settings.h
va-recorder/: CMakeLists.txt  version.h.in
va-recorder/src/: app.cpp  app.h  main.cpp  utils.cpp  utils.h  version.h
va-recorder/src/capture/: capture.h
va-recorder/src/capture/ffmpeg/: archive.cpp  archive.h  avformat.cpp  avformat.h  avframe.cpp  avframe.h  avpacket.cpp  avpacket.h  backend.cpp  backend.h  codec.cpp  codec.h
va-recorder/src/source/: source.cpp  source.h
va-recorder/src/state/: state.cpp  state.h
watcher/: watcher.h
